<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header android:title="@string/user_interface" />

    <header
        android:id="@+id/user_interface"
        android:fragment="com.tripndroid.tdsettings.fragments.UserInterface"
        android:title="@string/general_ui"
        android:icon="@drawable/ic_tdsettings_general_ui"
        android:summary="@string/header_summary_general_ui" />

    <header
        android:id="@+id/lockscreen"
        android:fragment="com.tripndroid.tdsettings.fragments.Lockscreens"
        android:title="@string/lockscreen_options"
        android:icon="@drawable/ic_tdsettings_lockscreens"
        android:summary="@string/header_summary_lockscreens" />

    <header
        android:id="@+id/power_menu"
        android:fragment="com.tripndroid.tdsettings.fragments.PowerMenu"
        android:title="@string/power_menu"
        android:icon="@drawable/ic_tdsettings_power_menu"
        android:summary="@string/header_summary_power_menu" />

     <header
        android:id="@+id/nav_bar"
        android:fragment="com.tripndroid.tdsettings.fragments.Navbar"
        android:title="@string/nav_bar"
        android:icon="@drawable/ic_tdsettings_navigation_bar"
        android:summary="@string/header_summary_navigation_bar" />

     <header
        android:id="@+id/nav_ring"
        android:fragment="com.tripndroid.tdsettings.fragments.NavRingTargets"
        android:icon="@drawable/ic_tdsettings_navigation_ring"
        android:title="@string/interface_navring_settings_title"
        android:summary="@string/interface_navring_settings_summary" />

     <header
        android:id="@+id/ribbon_targets"
        android:fragment="com.tripndroid.tdsettings.fragments.RibbonTargets"
        android:icon="@drawable/ic_tdsettings_ribbon"
        android:title="@string/ribbon_settings_title"
        android:summary="@string/ribbon_settings_summary" />

    <header
        android:id="@+id/statusbar"
        android:title="@string/header_statusbar" />

    <header
        android:id="@+id/statusbar_toggles"
        android:title="@string/toggles_layout"
        android:fragment="com.tripndroid.tdsettings.fragments.StatusBarToggles"
        android:icon="@drawable/ic_tdsettings_quick_settings"
        android:summary="@string/header_summary_toggles" />

    <header
        android:id="@+id/statusbar_battery"
        android:title="@string/battery"
        android:fragment="com.tripndroid.tdsettings.fragments.StatusBarBattery"
        android:icon="@drawable/ic_tdsettings_battery"
        android:summary="@string/header_summary_battery" />

    <header
        android:id="@+id/statusbar_clock"
        android:fragment="com.tripndroid.tdsettings.fragments.StatusBarClock"
        android:summary="@string/header_summary_clock"
        android:icon="@drawable/ic_tdsettings_clock"
        android:title="@string/clock" />

    <header
        android:id="@+id/statusbar_signal"
        android:title="@string/signal"
        android:fragment="com.tripndroid.tdsettings.fragments.StatusBarSignal"
        android:icon="@drawable/ic_tdsettings_signal"
        android:summary="@string/header_summary_signal" />

    <header
        android:id="@+id/system"
        android:title="@string/header_system" />

    <header
        android:id="@+id/led"
        android:fragment="com.tripndroid.tdsettings.fragments.LEDControl"
        android:title="@string/led_options"
        android:icon="@drawable/ic_tdsettings_led"
        android:summary="@string/header_summary_led" />

    <header
        android:id="@+id/spen"
        android:fragment="com.tripndroid.tdsettings.fragments.SPenGestures"
        android:title="@string/spen_options"
        android:icon="@drawable/ic_tdsettings_spen"
        android:summary="@string/header_summary_spen" />

    <header
        android:id="@+id/sound"
        android:fragment="com.tripndroid.tdsettings.fragments.Sound"
        android:title="@string/sound"
        android:icon="@drawable/ic_tdsettings_sound"
        android:summary="@string/header_summary_sound" />

    <header
        android:id="@+id/vibrations"
        android:title="@string/vibrations"
        android:summary="@string/header_summary_vibrations"
        android:icon="@drawable/ic_tdsettings_vibrations"
        android:fragment="com.tripndroid.tdsettings.fragments.Vibrations" />

    <header
        android:id="@+id/hw_buttons"
        android:title="@string/additional_options_title" />

    <header
        android:id="@+id/lockscreen_buttons"
        android:fragment="com.tripndroid.tdsettings.fragments.LockscreenButtons"
        android:title="@string/lockscreen_buttons_title"
        android:icon="@drawable/ic_tdsettings_lockscreen_buttons"
        android:summary="@string/header_summary_lockscreen_buttons" />

</preference-headers>
