<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/lcd_density_entries"
        android:entryValues="@array/lcd_density_entries"
        android:key="lcd_density"
        android:title="@string/custom_density_title"
        android:summary="@string/current_lcd_density" />

    <Preference
        android:key="reboot"
        android:title="@string/reboot_title"
        android:summary="@string/reboot_summary" />

    <Preference
        android:key="clear_market_data"
        android:title="@string/clear_market_data_title"
        android:summary="@string/clear_market_data_summary" />

    <Preference
        android:key="open_market"
        android:title="@string/open_market_title"
        android:summary="@string/open_market_summary" />

</PreferenceScreen>
